  - remove DEPRECATED insert_timestamp
  - remove DEPRECATED select method relation option
  - remove DEPRECATED update timestamp option
  - remove DEPRECATED insert timestamp option
  - remove DEPRECATED update(DBIx::Custom) method's updated_at option
  - remove DEPRECATED update(DBIx::Custom) method's param option
  - remove DEPRECATED insert method param option

0.37
  - catch up Object::Simple 3.16. fix DEPRECATED warnings.
0.36
  - Fix the bug that the following feature which is add to 0.35 don't work.
    add join attribute to DBIx::Custom::Where
    to add join infomartion to select method
0.35
  - remove EXPERIMENTAL status the following.
    add select method column option syntax
    {__MY__ => '*'}
  - remove EXPERIMENTAL last_sql attribute
  - add join attribute to DBIx::Custom::Where
    to add join infomartion to select method
0.34
  - (EXPERIMENTAL) fix async select not getting err bug.
0.33
  - (EXPERIMENTAL) fix MySQL async insert result.
0.32
  - (EXPERIMENTAL) add EXPERIMENTAL last_sth method.
  - (EXPERIMENTAL) fix async insert logic.
0.31
  - (EXPERIMENTAL) fix async insert not working bug.
  - fix Model subdirectory namespcae not working bug.
0.30
  - (EXPERIMENTAL) rename mycolumn_symbol attribute to mytable_symbol
0.29
  - (EXPERIMENTAL) add select method column option syntax
    {__MY__ => '*'}
    You can sepcify column names of main table very easy
  - (EXPERIMENTAL) add mycolumn_symbol attribute
0.28
  - DBIx::Custom::Result::kv method's multi option is DEPRECATED!
    added DBIx::Custom::Result::kvs method instead.
0.27
  - fixed documentation miss about execute method's table_alias option.
0.26
  - fixed bug that when id option's value is object, don't work.
0.25
  - added DBIX_CUSTOM_SUPPRESS_DEPRECATION environment varaible
    to suppress deprecation warnings
  - removed EXPERIMENTAL status from DBIx::Custom::Result::kv method
  - removed EXPERIMETNAL status from DBIx::Custom::Result::flat method